# Wargame

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: aerial.cpp.274392683D52BFFD.idx  aerial.h.FFEE251DA3D1996C.idx  case.cpp.EFC7C15E455D3230.idx  case.h.8C033172677267E4.idx  city.cpp.5A9037E7B5079BB7.idx  city.h.0B5F5106495BD657.idx  game.cpp.30AAF94C0ED60C71.idx  game.h.8726FE43EAB4754E.idx  improvement_database.cpp.506F3F0EF0BE2F32.idx  improvement_database.h.0D6057F2777D48EF.idx  main.cpp.DB1AEE55F409424D.idx  map.cpp.437119A2191DAB62.idx  map.h.6A291B704A618951.idx  maritime.cpp.5BAE8FC0ECC63E9E.idx  maritime.h.55191EB5F9D392F0.idx  player.cpp.D5310F7DA999BA01.idx  player.h.1EBD88F419C2CF96.idx  resource_database.h.23C3417672F4E9DF.idx  terrestrial.h.B4270203ADFDBD94.idx  type.cpp.011A0398ABBE666C.idx  type.h.52DEBF0C0F9B7FDD.idx  units.cpp.561EBEF1017BF730.idx  units.h.A850ED1C1ED64EFC.idx
Inutile_maintenant/: Ancien_main.cpp
Inutile_maintenant/include/glad/: glad.h
resources/: resources.qrc
src/: glad.c  main.cpp  type.cpp  type.h
src/files/csv/: matrix_units.csv  matrix_units_avantages.csv  matrix_units_strength_weakness.csv
src/game/: game.cpp  game.h  player.cpp  player.h  player_utils.cpp  player_utils.h
src/map/: INSTRUCTION.md  building_database.cpp  building_database.h  case.cpp  case.h  city.cpp  city.h  creation_map.h  improvement_database.cpp  improvement_database.h  map.cpp  map.h  resource_database.cpp  resource_database.h  technology.cpp  technology.h  terrains.cpp  terrains.h
src/troupes/: Troupes.cpp  Troupes.h
src/units/: aerial.cpp  aerial.h  maritime.cpp  maritime.h  neutral.cpp  neutral.h  terrestrial.cpp  terrestrial.h  unit_utils.cpp  unit_utils.h  units.cpp  units.h
src/window/: Information.md  MainWindow.cpp  MainWindow.h  Mainmenu.cpp  Mainmenu.h  MyGLWidget.cpp  MyGLWidget.h  OptionMenu.cpp  OptionMenu.h  SetupNewGameWindow.cpp  SetupNewGameWindow.h
src/window/ScreenProductions/: CityProductionWidget.cpp  CityProductionWidget.h
src/window/ScreenUnitStatsActions/: UnitActionsWidget.cpp  UnitActionsWidget.h  UnitControlPanel.cpp  UnitControlPanel.h  UnitStatsWidget.cpp  UnitStatsWidget.h
